examples/datalog/07_filters/06_filter_computed.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_filter_computed
Knowledge graph 'test_filter_computed' created.
Switched to knowledge graph: test_filter_computed
> .kg use test_filter_computed
Switched to knowledge graph: test_filter_computed
> +numbers[(1,), (2,), (3,), (4,), (5,), (6,)].
Inserted 6 fact(s) into 'numbers'.
> big_doubled(X, D) :- numbers(X), D = X * 2, D > 6.
Script error: Query execution failed: Unsafe rule: Atom { relation: "big_doubled", args: [Variable("X"), Variable("D")] }. Variables ["D"] in head do not appear in positive body atoms.
