examples/datalog/07_filters/06_filter_computed.dl
% Test: Filter on computed value
% Expected: Filters work on computed values
% Category: 07_filters
% Priority: P1 - Filter operations

.kg create test_filter_computed
.kg use test_filter_computed

+numbers[(1,), (2,), (3,), (4,), (5,), (6,)].

% Filter on doubled value
big_doubled(X, D) :- numbers(X), D = X * 2, D > 6.

?- big_doubled(X, D).

% Filter on sum
above_threshold(X, S) :- numbers(X), S = X + 10, S >= 14.

?- above_threshold(X, S).

.kg use default
.kg drop test_filter_computed
